<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="IdAdmobNews">ca-app-pub-8071725374187869/4234037037</string>
    <string name="NativeAdMobId">ca-app-pub-8071725374187869/8779417431</string>
    <string name="NativeAdMob_Large">ca-app-pub-8071725374187869/2533650238</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad">Ad</string>
    <string name="adMobId">ca-app-pub-8071725374187869/5710770237</string>
    <string name="ad_attribution">Ad</string>
    <string name="app_name">Latihan TOEFL Structure</string>
    <string name="applovin_instructions_dialog_title">Instructions</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="belajar">Belajar</string>
    <string name="best">Best score :</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_web_client_id">948628108682-qql6m5i0mfu298pcccd87nho3ca735nl.apps.googleusercontent.com</string>
    <string name="delapan">/ 8</string>
    <string name="example">Example :</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="firebase_database_url">https://latihan-toefl-structure.firebaseio.com</string>
    <string name="gcm_defaultSenderId">948628108682</string>
    <string name="google_api_key">AIzaSyC7qF1ZMWOzNM_qC51_J4YbJ7lBLYOhEW8</string>
    <string name="google_app_id">1:948628108682:android:63f15f349540ce24</string>
    <string name="google_crash_reporting_api_key">AIzaSyC7qF1ZMWOzNM_qC51_J4YbJ7lBLYOhEW8</string>
    <string name="google_storage_bucket">latihan-toefl-structure.appspot.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="install">install</string>
    <string name="jj">Jump Jump</string>
    <string name="lts">Latihan TOEFL Structure</string>
    <string name="md">Mining Dictionary</string>
    <string name="meaning">Meaning</string>
    <string name="more">more</string>
    <string name="nilai">Nilai :</string>
    <string name="part_of">Parts of speech :</string>
    <string name="pd">Petroleum Dictionary</string>
    <string name="project_id">latihan-toefl-structure</string>
    <string name="ps">Paprika Studio</string>
    <string name="pts">Pro TOEFL Structure</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="sembilan">/ 9</string>
    <string name="sepuluh">/ 10</string>
    <string name="statistik">Statistik</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str">Simple TOEFL Reading</string>
    <string name="test">TEST</string>
    <string name="todays_word">"Today's word"</string>
    <string name="tx_benar">CORRECT</string>
    <string name="tx_comp_cap">TOEFL STRUCTURE</string>
    <string name="tx_details">SEE DETAILS</string>
    <string name="tx_instruction">Instruction</string>
    <string name="tx_lesson">Lesson</string>
    <string name="tx_lesson_grammar">Grammar</string>
    <string name="tx_lesson_grammar_desc">Common grammar problem in TOEFL</string>
    <string name="tx_lesson_more">More</string>
    <string name="tx_lesson_read">Read</string>
    <string name="tx_lewat">BLANK</string>
    <string name="tx_list">Pilih paket Soal Latihan</string>
    <string name="tx_menu">Menu</string>
    <string name="tx_next">Next</string>
    <string name="tx_note">note :</string>
    <string name="tx_offline_msg">Tolong aktifkan koneksi internet anda. Apabila anda tidak suka atau merasa terganggu dengan iklan-iklan yang muncul, tolong pertimbangkan untuk menggunakan versi Pro dari aplikasi ini. Dengan pendapatan dari penjualan aplikasi dan iklan lah aplikasi ini dapat terus dikembangkan dengan harapan dapat memberi manfaat dan membantu banyak orang yang membutuhkan.</string>
    <string name="tx_random">RANDOM</string>
    <string name="tx_random_desc">Test dengan soal-soal terkait Structure yang muncul secara acak</string>
    <string name="tx_random_desc_b">Test dengan soal-soal terkait Incorrect Word(s) yang muncul secara acak</string>
    <string name="tx_reading_cap">MATERI</string>
    <string name="tx_reading_desc">Materi-materi yang sering diuji pada ujian TOEFL bagian structure.</string>
    <string name="tx_retry">RETRY</string>
    <string name="tx_review">review</string>
    <string name="tx_review_cap">REVIEW</string>
    <string name="tx_salah">WRONG</string>
    <string name="tx_score">S C O R E</string>
    <string name="tx_start">Start</string>
    <string name="tx_test_a">Part A</string>
    <string name="tx_test_a_paket">PILIH PAKET</string>
    <string name="tx_test_a_paket_desc">Berisi paket-paket soal test khusus Part A yang dapat dipilih</string>
    <string name="tx_test_b">Part B</string>
    <string name="tx_test_b_paket_desc">Berisi paket-paket soal test khusus Part B yang dapat dipilih</string>
    <string name="tx_timer">TIMER</string>
    <string name="tx_to_menu">MENU</string>
    <string name="tx_to_score">SCORE</string>
    <string name="tx_vocab_cap">GRAMMAR</string>
    <string name="tx_vocab_desc">Belajar kembali ttg Grammar untuk memudahkan menjawab soal.</string>
    <string name="tx_your_ans">Your answers :</string>
    <string name="txt_free_access_window">Akses Gratis anda untuk mengakses Content ini sudah habis. Akses gratis dapat diperoleh dengan menonton iklan video sampai selesai. Akses penuh untuk Content ini hanya terdapat di versi PRO dari aplikasi ini.</string>
    <string name="txt_latihan">Latihan</string>
    <string name="txt_pmp">Practice makes perfect</string>
    <string name="txt_rts">Road to Success</string>
    <string name="txt_start">B E L A J A R</string>
</resources>
