<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffdfded9" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/layout_iklan_ps_random" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/sub_container" android:layout_width="340.0dip" android:layout_height="90.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/layout_kiri" android:layout_width="85.0dip" android:layout_height="fill_parent">
                <TextView android:textSize="9.0sp" android:textColor="@color/putih" android:background="@color/garis_abu2" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text=" Ad " />
                <ImageView android:layout_gravity="center" android:id="@id/icon_apps" android:layout_width="66.0dip" android:layout_height="66.0dip" android:layout_marginTop="4.0dip" android:src="@drawable/icon_structure" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/layout_tengah" android:layout_width="175.0dip" android:layout_height="fill_parent">
                <TextView android:textSize="15.0dip" android:textStyle="bold" android:gravity="bottom" android:id="@id/nama_apps" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/lts" android:layout_weight="1.0" />
                <TextView android:textSize="12.0dip" android:gravity="center_vertical" android:id="@id/studio" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="2.0dip" android:text="@string/ps" android:layout_weight="1.0" />
                <RatingBar android:theme="@style/RatingBar" android:id="@id/ratingBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:numStars="5" android:rating="4.0" style="?android:ratingBarStyleSmall" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/layout_kanan" android:layout_width="80.0dip" android:layout_height="fill_parent">
                <TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <LinearLayout android:id="@id/install_apps" android:background="@drawable/install_button" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/putih" android:gravity="center" android:id="@id/tv_install_apps" android:background="@drawable/install_button" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:text="@string/install" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>