<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/iklan_pts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="9.0sp" android:textColor="@color/putih" android:background="@color/orange_normal" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text=" Ad " />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/pts_nat_large" android:layout_width="340.0dip" android:layout_height="196.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="340.0dip" android:layout_height="120.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="260.0dip" android:layout_height="120.0dip">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="70.0dip">
                    <LinearLayout android:orientation="vertical" android:layout_width="85.0dip" android:layout_height="fill_parent">
                        <ImageView android:layout_gravity="center" android:layout_width="66.0dip" android:layout_height="66.0dip" android:layout_marginTop="4.0dip" android:src="@drawable/icon_pts" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="175.0dip" android:layout_height="fill_parent">
                        <TextView android:textSize="15.0sp" android:textStyle="bold" android:gravity="bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/pts" android:layout_weight="1.0" />
                        <TextView android:textSize="12.0dip" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="2.0dip" android:text="@string/ps" android:layout_weight="1.0" />
                        <RatingBar android:theme="@style/RatingBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:numStars="5" android:rating="4.0" style="?android:ratingBarStyleSmall" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="50.0dip">
                    <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:gravity="bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="4.0dip" android:layout_marginBottom="2.0dip" android:text="Download versi Pro dari Latihan TOEFL Structure. Bebas iklan, dan materi lengkap" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="80.0dip" android:layout_height="fill_parent">
                <TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <LinearLayout android:id="@id/install_pts" android:background="@drawable/install_button" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/putih" android:gravity="center" android:id="@id/tv_install_pts" android:background="@drawable/install_button" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:text="@string/install" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>